# FlightScanner

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATION_FIX_SUMMARY.md  QUNAR_DEBUG_STATUS.md  README.md  ROADMAP.md  ctrip_cookies.json.example  main.py  pyproject.toml  qunar_auto_debug.html  qunar_cookies.json.example
config/: .gitkeep
docs/: MIGRATION.md  QUNAR_QR_CODE_FIX.md  deployment-2c4g.md  evolution_engine.md  notifications.md
feature_log/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.5.0.md  v1.5.1.md  v2.0.0.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  routes.ts
frontend/src/components/dashboard/: DecisionBadge.tsx  FilterTabs.tsx  KpiCards.tsx  MiniTrendChart.tsx  MonitorCard.tsx  MonitorCardGrid.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/radar/: DealCard.tsx  FilterBar.tsx  RadarHero.tsx  WeekendPicker.tsx
frontend/src/components/route-detail/: AIInsightsTab.tsx  ConfigTab.tsx  FlightsTab.tsx  PriceTrendsTab.tsx  RouteDetailHeader.tsx  TabNavigation.tsx
frontend/src/hooks/: useRouteDetail.ts  useRoutes.ts  useStats.ts  useTicker.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: AddMonitorPage.tsx  AlertsPage.tsx  AnalyticsPage.tsx  CalendarPage.tsx  ComingSoonPage.tsx  DashboardPage.tsx  HistoryPage.tsx  RadarPage.tsx  RouteDetailPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts  radar.ts
scripts/: analyze_qunar_auto.py  ctrip_login.py  debug_ctrip.py  debug_page_elements.py  debug_qunar_login.py  debug_scrape.py  extract_qunar_cookies.py  fetch_city_images.py  migrate_add_scrape_interval.py  qunar_login.py  test_qr_fix.py  trigger_qunar_login.py  verify_db.py  verify_llm.py  verify_migration.py  verify_notify.py  verify_scraper.py
src/flightscanner/: __init__.py  cli.py  interfaces.py
src/flightscanner/analyzers/: __init__.py  deepseek_analyzer.py  evolution_engine.py  rule_based_analyzer.py
src/flightscanner/api/: __init__.py  deps.py  main.py  route_filter.py  schemas.py  status_resolver.py  time_utils.py
src/flightscanner/api/routers/: cookies.py  (+6 more)
src/flightscanner/core/: __init__.py
src/flightscanner/models/: __init__.py  database.py
src/flightscanner/notifiers/: __init__.py  email_notifier.py  feishu_notifier.py  telegram_notifier.py  wecom_notifier.py
src/flightscanner/repositories/: __init__.py  sqlalchemy_repository.py
src/flightscanner/scheduler/: __init__.py  price_monitor.py
src/flightscanner/scrapers/: __init__.py  ctrip_scraper.py  qunar_scraper.py  registry.py
src/flightscanner/utils/: __init__.py  city_codes.py  config.py
src/flightscanner/weekend_radar/: __init__.py  brief_generator.py  destinations.py  scanner.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_e2e.py  test_evolution_engine.py  test_integration.py  test_notification_triggers.py  test_notifier.py  test_pinned_dialog_logic.py  test_price_monitor_pinned.py  test_qunar_scraper.py  test_registry.py  test_repository.py  test_scraper.py  test_weekend_radar.py
ui/: __init__.py  app.py
ui/components/: __init__.py  ai_brief.py  charts.py  cookie_manager.py  overview.py  sidebar.py  weekend_radar.py
ui/utils/: __init__.py  db.py
(+3 files in other folders)
