[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightscanner"
version = "0.2.1"
description = "Flight price monitoring and analysis system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["flight", "price-monitoring", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # Web Scraping
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # HTTP & Async
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",

    # LLM Integration (DeepSeek API compatible with OpenAI format)
    "openai>=1.12.0",  # Used for DeepSeek API
    # "langchain>=0.1.0",  # Optional: for complex LLM workflows
    # "langchain-openai>=0.0.5",

    # Configuration & Utils
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",  # Retry mechanism
    "click>=8.1.0",  # CLI framework

    # Web UI
    "streamlit>=1.30.0",
    "altair>=5.0.0",
    "pandas>=2.0.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # Notifications (optional, can be added as needed)
    # "notify-py>=0.3.0",  # Desktop notifications
    # "python-telegram-bot>=21.0",  # Telegram notifications
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "isort>=5.13.0",

    # Type stubs
    "types-beautifulsoup4>=4.12.0",
]

[project.scripts]
flightscanner = "flightscanner.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/flightscanner"
Repository = "https://github.com/yourusername/flightscanner"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
